@@ -22,12 +22,13 @@ import com.liferay.portal.kernel.upload.UploadException;
 import com.liferay.portal.kernel.upload.UploadServletRequest;
 import com.liferay.portal.kernel.util.ArrayUtil;
 import com.liferay.portal.kernel.util.FileUtil;
+import com.liferay.portal.kernel.util.ProgressTracker;
 import com.liferay.portal.kernel.util.PropsKeys;
 import com.liferay.portal.kernel.util.StringBundler;
 import com.liferay.portal.kernel.util.SystemProperties;
 import com.liferay.portal.kernel.util.Validator;
+import com.liferay.portal.kernel.util.WebKeys;
 import com.liferay.portal.util.PrefsPropsUtil;
-import com.liferay.portal.util.WebKeys;
 
 import java.io.File;
 import java.io.IOException;
@@ -42,10 +43,12 @@ import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.TreeSet;
 
 import javax.servlet.ServletInputStream;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletRequestWrapper;
+import javax.servlet.http.HttpSession;
 
 import org.apache.commons.fileupload.FileUploadBase;
 import org.apache.commons.fileupload.servlet.ServletFileUpload;
@@ -83,20 +86,62 @@ public class UploadServletRequestImpl
 		LiferayServletRequest liferayServletRequest = null;
 
 		try {
-			ServletFileUpload servletFileUpload = new LiferayFileUpload(
-				new LiferayFileItemFactory(getTempDir()), request);
+			HttpSession session = request.getSession();
 
-			servletFileUpload.setSizeMax(
-				PrefsPropsUtil.getLong(
-					PropsKeys.UPLOAD_SERVLET_REQUEST_IMPL_MAX_SIZE));
+			session.removeAttribute(ProgressTracker.PERCENT);
+
+			ServletFileUpload servletFileUpload = new ServletFileUpload(
+				new LiferayFileItemFactory(getTempDir()));
 
 			liferayServletRequest = new LiferayServletRequest(request);
 
 			List<org.apache.commons.fileupload.FileItem> fileItems =
 				servletFileUpload.parseRequest(liferayServletRequest);
 
+			liferayServletRequest.setFinishedReadingOriginalStream(true);
+
+			long uploadServletRequestImplMaxSize = PrefsPropsUtil.getLong(
+				PropsKeys.UPLOAD_SERVLET_REQUEST_IMPL_MAX_SIZE);
+			long uploadServletRequestImplSize = 0;
+
+			int contentLength = request.getContentLength();
+
+			if ((uploadServletRequestImplMaxSize > 0) &&
+				((contentLength == -1) ||
+				 (contentLength > uploadServletRequestImplMaxSize))) {
+
+				fileItems = sort(fileItems);
+			}
+
 			for (org.apache.commons.fileupload.FileItem fileItem : fileItems) {
 				LiferayFileItem liferayFileItem = (LiferayFileItem)fileItem;
+
+				if (uploadServletRequestImplMaxSize > 0) {
+					long itemSize = liferayFileItem.getItemSize();
+
+					if ((uploadServletRequestImplSize + itemSize) >
+							uploadServletRequestImplMaxSize) {
+
+						StringBundler sb = new StringBundler(3);
+
+						sb.append(
+							"Request reached the maximum permitted size of ");
+						sb.append(uploadServletRequestImplMaxSize);
+						sb.append(" bytes");
+
+						UploadException uploadException = new UploadException(
+							sb.toString());
+
+						uploadException.setExceededUploadRequestSizeLimit(true);
+
+						request.setAttribute(
+							WebKeys.UPLOAD_EXCEPTION, uploadException);
+
+						continue;
+					}
+
+					uploadServletRequestImplSize += itemSize;
+				}
 
 				if (liferayFileItem.isFormField()) {
 					liferayFileItem.setString(request.getCharacterEncoding());
@@ -126,7 +171,6 @@ public class UploadServletRequestImpl
 
 						uploadException.setExceededLiferayFileItemSizeLimit(
 							true);
-						uploadException.setExceededSizeLimit(true);
 
 						request.setAttribute(
 							WebKeys.UPLOAD_EXCEPTION, uploadException);
@@ -164,10 +208,11 @@ public class UploadServletRequestImpl
 		catch (Exception e) {
 			UploadException uploadException = new UploadException(e);
 
-			if (e instanceof FileUploadBase.FileSizeLimitExceededException ||
-				e instanceof FileUploadBase.SizeLimitExceededException ) {
-
-				uploadException.setExceededSizeLimit(true);
+			if (e instanceof FileUploadBase.FileSizeLimitExceededException) {
+				uploadException.setExceededFileSizeLimit(true);
+			}
+			else if (e instanceof FileUploadBase.SizeLimitExceededException) {
+				uploadException.setExceededUploadRequestSizeLimit(true);
 			}
 
 			request.setAttribute(WebKeys.UPLOAD_EXCEPTION, uploadException);
@@ -181,20 +226,20 @@ public class UploadServletRequestImpl
 	}
 
 	public UploadServletRequestImpl(
-		HttpServletRequest request, Map<String, FileItem[]> fileParams,
-		Map<String, List<String>> regularParams) {
+		HttpServletRequest request, Map<String, FileItem[]> fileParameters,
+		Map<String, List<String>> regularParameters) {
 
 		super(request);
 
 		_fileParameters = new LinkedHashMap<>();
 		_regularParameters = new LinkedHashMap<>();
 
-		if (fileParams != null) {
-			_fileParameters.putAll(fileParams);
+		if (fileParameters != null) {
+			_fileParameters.putAll(fileParameters);
 		}
 
-		if (regularParams != null) {
-			_regularParameters.putAll(regularParams);
+		if (regularParameters != null) {
+			_regularParameters.putAll(regularParameters);
 		}
 
 		_liferayServletRequest = null;
@@ -208,6 +253,10 @@ public class UploadServletRequestImpl
 					liferayFileItem.delete();
 				}
 			}
+		}
+
+		if (_liferayServletRequest != null) {
+			_liferayServletRequest.cleanUp();
 		}
 	}
 
@@ -435,7 +484,11 @@ public class UploadServletRequestImpl
 		while (enu.hasMoreElements()) {
 			String name = enu.nextElement();
 
-			map.put(name, getParameterValues(name));
+			String[] values = getParameterValues(name);
+
+			if (values != null) {
+				map.put(name, values);
+			}
 		}
 
 		return map;
@@ -491,7 +544,7 @@ public class UploadServletRequestImpl
 		if (ArrayUtil.isNotEmpty(liferayFileItems)) {
 			FileItem liferayFileItem = liferayFileItems[0];
 
-			return new Long(liferayFileItem.getSize());
+			return Long.valueOf(liferayFileItem.getSize());
 		}
 
 		return null;
@@ -528,6 +581,39 @@ public class UploadServletRequestImpl
 		return inputStream;
 	}
 
+	protected List<org.apache.commons.fileupload.FileItem> sort(
+		List<org.apache.commons.fileupload.FileItem> fileItems) {
+
+		Map<String, GroupedFileItems> groupedFileItemsMap = new HashMap<>();
+
+		for (org.apache.commons.fileupload.FileItem fileItem : fileItems) {
+			String fieldName = fileItem.getFieldName();
+
+			GroupedFileItems groupedFileItems = groupedFileItemsMap.get(
+				fieldName);
+
+			if (groupedFileItems == null) {
+				groupedFileItems = new GroupedFileItems(fieldName);
+
+				groupedFileItemsMap.put(fieldName, groupedFileItems);
+			}
+
+			groupedFileItems.addFileItem(fileItem);
+		}
+
+		Set<GroupedFileItems> groupedFileItemsList = new TreeSet<>(
+			groupedFileItemsMap.values());
+
+		List<org.apache.commons.fileupload.FileItem> sortedFileItems =
+			new ArrayList<>();
+
+		for (GroupedFileItems groupedFileItems : groupedFileItemsList) {
+			sortedFileItems.addAll(groupedFileItems.getFileItems());
+		}
+
+		return sortedFileItems;
+	}
+
 	private static final Log _log = LogFactoryUtil.getLog(
 		UploadServletRequestImpl.class);
 
@@ -536,5 +622,56 @@ public class UploadServletRequestImpl
 	private final Map<String, FileItem[]> _fileParameters;
 	private final LiferayServletRequest _liferayServletRequest;
 	private final Map<String, List<String>> _regularParameters;
+
+	private static class GroupedFileItems
+		implements Comparable<GroupedFileItems> {
+
+		public GroupedFileItems(String key) {
+			_key = key;
+		}
+
+		public void addFileItem(
+			org.apache.commons.fileupload.FileItem fileItem) {
+
+			_fileItems.add(fileItem);
+
+			_fileItemsSize += fileItem.getSize();
+		}
+
+		@Override
+		public int compareTo(GroupedFileItems groupedFileItems) {
+			if (groupedFileItems == null) {
+				return 1;
+			}
+
+			if (equals(groupedFileItems)) {
+				return 0;
+			}
+
+			if (_key.equals(groupedFileItems._key)) {
+				return 1;
+			}
+
+			if (getFileItemsSize() >= groupedFileItems.getFileItemsSize()) {
+				return 1;
+			}
+
+			return -1;
+		}
+
+		public List<org.apache.commons.fileupload.FileItem> getFileItems() {
+			return _fileItems;
+		}
+
+		public int getFileItemsSize() {
+			return _fileItemsSize;
+		}
+
+		private final List<org.apache.commons.fileupload.FileItem> _fileItems =
+			new ArrayList<>();
+		private int _fileItemsSize;
+		private final String _key;
+
+	}
 
 }
