@@ -29,6 +29,7 @@ import com.liferay.portal.kernel.util.ContentTypes;
 import com.liferay.portal.kernel.util.FileUtil;
 import com.liferay.portal.kernel.util.GetterUtil;
 import com.liferay.portal.kernel.util.Http;
+import com.liferay.portal.kernel.util.PortalUtil;
 import com.liferay.portal.kernel.util.StringBundler;
 import com.liferay.portal.kernel.util.StringPool;
 import com.liferay.portal.kernel.util.StringUtil;
@@ -147,9 +148,9 @@ public class HttpImpl implements Http {
 
 		httpConnectionManagerParams.setConnectionTimeout(_TIMEOUT);
 		httpConnectionManagerParams.setDefaultMaxConnectionsPerHost(
-			new Integer(_MAX_CONNECTIONS_PER_HOST));
+			Integer.valueOf(_MAX_CONNECTIONS_PER_HOST));
 		httpConnectionManagerParams.setMaxTotalConnections(
-			new Integer(_MAX_TOTAL_CONNECTIONS));
+			Integer.valueOf(_MAX_TOTAL_CONNECTIONS));
 		httpConnectionManagerParams.setSoTimeout(_TIMEOUT);
 
 		_httpClient.setHttpConnectionManager(httpConnectionManager);
@@ -227,7 +228,7 @@ public class HttpImpl implements Http {
 
 		String anchor = urlArray[1];
 
-		StringBundler sb = new StringBundler(7);
+		StringBundler sb = new StringBundler(6);
 
 		sb.append(url);
 
@@ -260,7 +261,7 @@ public class HttpImpl implements Http {
 			return path;
 		}
 
-		path = StringUtil.replace(path, StringPool.SLASH, _TEMP_SLASH);
+		path = StringUtil.replace(path, CharPool.SLASH, _TEMP_SLASH);
 		path = decodeURL(path, true);
 		path = StringUtil.replace(path, _TEMP_SLASH, StringPool.SLASH);
 
@@ -269,7 +270,18 @@ public class HttpImpl implements Http {
 
 	@Override
 	public String decodeURL(String url) {
-		return decodeURL(url, false);
+		if (Validator.isNull(url)) {
+			return url;
+		}
+
+		try {
+			return URLCodec.decodeURL(url, StringPool.UTF8);
+		}
+		catch (IllegalArgumentException iae) {
+			_log.error(iae.getMessage());
+		}
+
+		return StringPool.BLANK;
 	}
 
 	/**
@@ -278,11 +290,7 @@ public class HttpImpl implements Http {
 	@Deprecated
 	@Override
 	public String decodeURL(String url, boolean unescapeSpaces) {
-		if (Validator.isNull(url)) {
-			return url;
-		}
-
-		return URLCodec.decodeURL(url, StringPool.UTF8);
+		return decodeURL(url);
 	}
 
 	public void destroy() {
@@ -313,7 +321,7 @@ public class HttpImpl implements Http {
 			return path;
 		}
 
-		path = StringUtil.replace(path, StringPool.SLASH, _TEMP_SLASH);
+		path = StringUtil.replace(path, CharPool.SLASH, _TEMP_SLASH);
 		path = encodeURL(path, true);
 		path = StringUtil.replace(path, _TEMP_SLASH, StringPool.SLASH);
 
@@ -458,15 +466,6 @@ public class HttpImpl implements Http {
 		return url;
 	}
 
-	/**
-	 * @deprecated As of 6.1.0, replaced by {@link
-	 *             #getHostConfiguration(String)}
-	 */
-	@Deprecated
-	public HostConfiguration getHostConfig(String location) throws IOException {
-		return getHostConfiguration(location);
-	}
-
 	public HostConfiguration getHostConfiguration(String location)
 		throws IOException {
 
@@ -587,7 +586,7 @@ public class HttpImpl implements Http {
 
 		if (url.startsWith(Http.HTTP)) {
 			int pos = url.indexOf(
-				StringPool.SLASH, Http.HTTPS_WITH_SLASH.length());
+				CharPool.SLASH, Http.HTTPS_WITH_SLASH.length());
 
 			url = url.substring(pos);
 		}
@@ -751,21 +750,19 @@ public class HttpImpl implements Http {
 			path = uri;
 		}
 
-		String[] uriParts = StringUtil.split(
-			path.substring(1), StringPool.SLASH);
+		String[] uriParts = StringUtil.split(path.substring(1), CharPool.SLASH);
 
 		List<String> parts = new ArrayList<>(uriParts.length);
 
-		for (int i = 0; i < uriParts.length; i++) {
-			String curUriPart = URLCodec.decodeURL(uriParts[i]);
-			String prevUriPart = null;
+		String prevUriPart = null;
 
-			if (i > 0) {
-				prevUriPart = URLCodec.decodeURL(uriParts[i - 1]);
-			}
+		for (String uriPart : uriParts) {
+			String curUriPart = URLCodec.decodeURL(uriPart);
 
 			if (curUriPart.equals(StringPool.DOUBLE_PERIOD)) {
-				if (!prevUriPart.equals(StringPool.PERIOD)) {
+				if ((prevUriPart != null) &&
+					!prevUriPart.equals(StringPool.PERIOD)) {
+
 					parts.remove(parts.size() - 1);
 				}
 			}
@@ -774,6 +771,12 @@ public class HttpImpl implements Http {
 
 				parts.add(URLCodec.encodeURL(curUriPart));
 			}
+
+			prevUriPart = curUriPart;
+		}
+
+		if (parts.isEmpty()) {
+			return StringPool.SLASH;
 		}
 
 		StringBundler sb = new StringBundler(parts.size() * 2 + 2);
@@ -1040,19 +1043,18 @@ public class HttpImpl implements Http {
 			return uri;
 		}
 
-		int pos = uri.indexOf(StringPool.SEMICOLON);
+		int pos = uri.indexOf(CharPool.SEMICOLON);
 
 		if (pos == -1) {
 			return uri;
 		}
 
-		String[] uriParts = StringUtil.split(
-			uri.substring(1), StringPool.SLASH);
+		String[] uriParts = StringUtil.split(uri.substring(1), CharPool.SLASH);
 
 		StringBundler sb = new StringBundler(uriParts.length * 2);
 
 		for (String uriPart : uriParts) {
-			pos = uriPart.indexOf(StringPool.SEMICOLON);
+			pos = uriPart.indexOf(CharPool.SEMICOLON);
 
 			if (pos == -1) {
 				sb.append(StringPool.SLASH);
@@ -1162,7 +1164,7 @@ public class HttpImpl implements Http {
 
 		StringBundler sb = new StringBundler();
 
-		String[] params = url.split(StringPool.AMPERSAND);
+		String[] params = StringUtil.split(url, CharPool.AMPERSAND);
 
 		for (int i = 0; i < params.length; i++) {
 			String param = params[i];
@@ -1171,7 +1173,7 @@ public class HttpImpl implements Http {
 				param.contains("_returnToFullPageURL=") ||
 				param.startsWith("redirect")) {
 
-				int pos = param.indexOf(StringPool.EQUAL);
+				int pos = param.indexOf(CharPool.EQUAL);
 
 				String qName = param.substring(0, pos);
 
@@ -1320,6 +1322,14 @@ public class HttpImpl implements Http {
 		}
 
 		URLConnection urlConnection = url.openConnection();
+
+		if (urlConnection == null) {
+			if (_log.isDebugEnabled()) {
+				_log.debug("Unable to open a connection to " + url);
+			}
+
+			return null;
+		}
 
 		try (InputStream inputStream = urlConnection.getInputStream();
 			UnsyncByteArrayOutputStream unsyncByteArrayOutputStream =
@@ -1795,7 +1805,7 @@ public class HttpImpl implements Http {
 	private final Credentials _proxyCredentials;
 	private final HttpClient _proxyHttpClient = new HttpClient();
 
-	private class FastProtocolSocketFactory
+	private static class FastProtocolSocketFactory
 		extends DefaultProtocolSocketFactory {
 
 		@Override
