@@ -17,13 +17,19 @@ package com.liferay.portlet;
 import com.liferay.portal.kernel.language.LanguageUtil;
 import com.liferay.portal.kernel.log.Log;
 import com.liferay.portal.kernel.log.LogFactoryUtil;
+import com.liferay.portal.kernel.model.Layout;
+import com.liferay.portal.kernel.model.PortletConstants;
+import com.liferay.portal.kernel.portlet.InvokerFilterContainer;
+import com.liferay.portal.kernel.portlet.InvokerPortlet;
 import com.liferay.portal.kernel.portlet.LiferayPortletConfig;
 import com.liferay.portal.kernel.portlet.LiferayPortletContext;
 import com.liferay.portal.kernel.portlet.LiferayPortletRequest;
 import com.liferay.portal.kernel.portlet.LiferayPortletResponse;
 import com.liferay.portal.kernel.portlet.PortletFilterUtil;
+import com.liferay.portal.kernel.service.PortletLocalServiceUtil;
 import com.liferay.portal.kernel.servlet.BufferCacheServletResponse;
 import com.liferay.portal.kernel.servlet.PortletServlet;
+import com.liferay.portal.kernel.util.ClassLoaderUtil;
 import com.liferay.portal.kernel.util.ClassUtil;
 import com.liferay.portal.kernel.util.GetterUtil;
 import com.liferay.portal.kernel.util.JavaConstants;
@@ -33,12 +39,8 @@ import com.liferay.portal.kernel.util.StringBundler;
 import com.liferay.portal.kernel.util.StringPool;
 import com.liferay.portal.kernel.util.StringUtil;
 import com.liferay.portal.kernel.util.Time;
-import com.liferay.portal.model.Layout;
-import com.liferay.portal.model.PortletConstants;
-import com.liferay.portal.service.PortletLocalServiceUtil;
+import com.liferay.portal.kernel.util.WebKeys;
 import com.liferay.portal.tools.deploy.PortletDeployer;
-import com.liferay.portal.util.ClassLoaderUtil;
-import com.liferay.portal.util.WebKeys;
 
 import java.io.Closeable;
 import java.io.IOException;
@@ -142,7 +144,7 @@ public class InvokerPortletImpl
 	}
 
 	public InvokerPortletImpl(
-		com.liferay.portal.model.Portlet portletModel, Portlet portlet,
+		com.liferay.portal.kernel.model.Portlet portletModel, Portlet portlet,
 		PortletConfig portletConfig, PortletContext portletContext,
 		InvokerFilterContainer invokerFilterContainer, boolean checkAuthToken,
 		boolean facesPortlet, boolean strutsPortlet,
@@ -155,7 +157,7 @@ public class InvokerPortletImpl
 	}
 
 	public InvokerPortletImpl(
-		com.liferay.portal.model.Portlet portletModel, Portlet portlet,
+		com.liferay.portal.kernel.model.Portlet portletModel, Portlet portlet,
 		PortletContext portletContext,
 		InvokerFilterContainer invokerFilterContainer) {
 
@@ -438,10 +440,7 @@ public class InvokerPortletImpl
 			((RenderResponseImpl)renderResponse).getProperties();
 
 		if (properties.containsKey("clear-request-parameters")) {
-			Map<String, String[]> renderParameters =
-				((RenderRequestImpl)renderRequest).getRenderParameters();
-
-			renderParameters.clear();
+			((RenderRequestImpl)renderRequest).clearRenderParameters();
 		}
 
 		if (_log.isDebugEnabled()) {
@@ -553,7 +552,8 @@ public class InvokerPortletImpl
 				if ((expCache != null) && (expCache.length > 0) &&
 					(expCache[0] != null)) {
 
-					_expCache = new Integer(GetterUtil.getInteger(expCache[0]));
+					_expCache = Integer.valueOf(
+						GetterUtil.getInteger(expCache[0]));
 				}
 			}
 		}
@@ -669,7 +669,7 @@ public class InvokerPortletImpl
 	}
 
 	private void _initialize(
-		com.liferay.portal.model.Portlet portletModel, Portlet portlet,
+		com.liferay.portal.kernel.model.Portlet portletModel, Portlet portlet,
 		PortletConfig portletConfig, PortletContext portletContext,
 		InvokerFilterContainer invokerFilterContainer, boolean checkAuthToken,
 		boolean facesPortlet, boolean strutsPortlet,
@@ -705,7 +705,7 @@ public class InvokerPortletImpl
 	private LiferayPortletContext _liferayPortletContext;
 	private Portlet _portlet;
 	private String _portletId;
-	private com.liferay.portal.model.Portlet _portletModel;
+	private com.liferay.portal.kernel.model.Portlet _portletModel;
 	private boolean _strutsBridgePortlet;
 	private boolean _strutsPortlet;
 
